--- a/index.html
+++ b/index.html
@@ -62,31 +62,28 @@
         h1 {
             font-size: 36px;
             font-weight: 700;
-            padding-top: 20px;
-            padding-bottom: 20px;
         }
 
         h2 {
             font-size: 30px;
             font-weight: 600;
-            padding-top: 20px;
-            padding-bottom: 20px;
         }
 
         h3 {
             font-size: 24px;
             font-weight: 600;
-            padding-top: 20px;
-            padding-bottom: 20px;
         }
 
         h4 {
             font-size: 20px;
             font-weight: 600;
-            padding-top: 20px;
-            padding-bottom: 20px;
         }
 
+        .header{
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        
         .tax-summary {
             background-color: #f8f9fa;
             padding: 20px;
@@ -105,7 +102,7 @@
         .tax-amount {
             font-size: 38px;
             color: #0f5132;
-            margin: 10px 0;
+            margin: 5px 0;
         }
 
         .breakdown-section {
@@ -232,12 +229,26 @@
         .footer a:hover {
             text-decoration: underline;
         }
+
+        .title-section {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+        }
+        .title-section img {
+            width: 40px;
+            height: 40px;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1 class="text-center">Singapore Personal Income Tax Calculator</h1>
+        <div class="title-section">
+            <img src="favicon/android-chrome-192x192.png" alt="Tax Calculator Icon">
+            <h1 class="header">Singapore Personal Income Tax Calculator</h1>
+        </div>
 
         <div class="card">
             <div class="card-body">
@@ -269,11 +280,11 @@
 
                 </ul>
 
-                <div class="tab-content" id="calculatorTabsContent">
+                <div class="tab-content px-3" id="calculatorTabsContent">
                     <div class="tab-pane fade show active" id="calculator" role="tabpanel">
                         <div class="card">
                             <div class="card-body">
-                                <h2 class="card-title">CPF Configuration</h2>
+                                <h2 class="card-title header">CPF Configuration</h2>
                                 <div class="card-body">
                                     <p>This calculator helps you estimate your Singapore personal income tax and CPF
                                         contributions for Year of Assessment 2024 (income earned in 2023). Note: Please read the <a href="#"
@@ -325,7 +336,7 @@
                     <div class="tab-pane fade" id="instructions" role="tabpanel">
                         <div class="card">
                             <div class="card-body">
-                                <h2>How to Use the Singapore Personal Income Tax Calculator</h2>
+                                <h2 class="header">How to Use the Singapore Personal Income Tax Calculator</h2>
 
                                 <div class="alert alert-warning mb-4">
                                     <strong>Important:</strong> Please read the <a href="#"
@@ -395,16 +406,16 @@
                     <div class="tab-pane fade" id="faq" role="tabpanel">
                         <div class="card">
                             <div class="card-body">
-                                <h2>Frequently Asked Questions</h2>
+                                <h2 class="header">Frequently Asked Questions</h2>
 
                                 <div class="accordion" id="faqAccordion">
                                     <div class="accordion-item">
-                                        <h2 class="accordion-header">
+                                        <h3 class="accordion-header">
                                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#faq1">
                                                 What are Singapore's tax rates for personal income?
                                             </button>
-                                        </h2>
+                                        </h3>
                                         <div id="faq1" class="accordion-collapse collapse show"
                                             data-bs-parent="#faqAccordion">
                                             <div class="accordion-body">
@@ -426,12 +437,12 @@
                                     </div>
 
                                     <div class="accordion-item">
-                                        <h2 class="accordion-header">
+                                        <h3 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#faq2">
                                                 What determines my Singapore tax residency status?
                                             </button>
-                                        </h2>
+                                        </h3>
                                         <div id="faq2" class="accordion-collapse collapse"
                                             data-bs-parent="#faqAccordion">
                                             <div class="accordion-body">
@@ -456,12 +467,12 @@
                                     </div>
 
                                     <div class="accordion-item">
-                                        <h2 class="accordion-header">
+                                        <h3 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#faq3">
                                                 How is personal income tax calculated for Singapore residents?
                                             </button>
-                                        </h2>
+                                        </h3>
                                         <div id="faq3" class="accordion-collapse collapse"
                                             data-bs-parent="#faqAccordion">
                                             <div class="accordion-body">
@@ -498,7 +509,7 @@
                     <div class="tab-pane fade" id="buckets" role="tabpanel">
                         <div class="card">
                             <div class="card-body">
-                                <h2>Tax Buckets</h2>
+                                <h2 class="header">Tax Buckets</h2>
                                 
                                 <div class="alert alert-info mb-4">
                                     <h4 class="alert-heading">Understanding Progressive Tax Rates</h4>
@@ -541,7 +552,7 @@
                     <div class="tab-pane fade" id="cpf-rates" role="tabpanel">
                         <div class="card">
                             <div class="card-body">
-                                <h2>CPF Contribution Rates</h2>
+                                <h2 class="header">CPF Contribution Rates</h2>
 
                                 <div class="alert alert-info mb-4">
                                     <h4 class="alert-heading">Understanding CPF Contributions</h4>
@@ -593,12 +604,10 @@
                     <div class="tab-pane fade" id="disclaimer" role="tabpanel">
                         <div class="card">
                             <div class="card-body">
-                                <h2>Disclaimer</h2>
+                                <h2 class="header">Disclaimer</h2>
 
-                                <div class="alert alert-warning mb-4">
-                                    <h4 class="alert-heading">Important Notice</h4>
-                                    <p>This tax calculator is provided for educational and estimation purposes only. It
-                                        should not be relied upon for tax planning or official tax calculations.</p>
+                                <div class="alert alert-warning">
+                                    This tax calculator is provided for educational and estimation purposes only. It should not be relied upon for tax planning or official tax calculations.
                                 </div>
 
                                 <h4 class="mb-3">Please Note:</h4>
@@ -810,7 +819,7 @@
 
             let resultHTML = '';
 
-            resultHTML += `<h2>Calculation Breakdown:</h2>`;
+            resultHTML += `<h2 class="header">Calculation Breakdown:</h2>`;
             resultHTML += `<p><b>Annual Income:</b> $${income.toLocaleString()}</p>`;
 
             if (includeCPF) {
@@ -837,7 +846,7 @@
             resultHTML += `<div class="breakdown-section">`;
 
 
-            resultHTML += `<h2>Tax Bracket Breakdown:</h2>`;
+            resultHTML += `<h2 class="header">Tax Bracket Breakdown:</h2>`;
             taxBreakdown.forEach(item => {
                 resultHTML += `<p>${item.bracket} (${(item.rate * 100).toFixed(1)}%)<br>
                              Taxable Amount: $${item.taxable.toLocaleString()}<br>
