--- a/index.html
+++ b/index.html
@@ -241,6 +241,16 @@
             height: 40px;
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNGVJ8XCBZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GNGVJ8XCBZ');
+    </script>
 </head>
 
 <body>
